--- a/npcs/hehliad_dys.yaml
+++ b/npcs/hehliad_dys.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -461,59 +461,102 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Charisma
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Magic
     skills:
-    - Forest Gnome Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-        Gnome Cunning: advantage on all Intelligence, Wisdom, and Charisma saves against magic
-        Natural Illusionist:  knows the Minor Illusion cantrip. Intelligence is your spellcasting modifier for it
-        Speak with Small Beasts: Through sound and gestures, you may communicate simple ideas with Small or smaller beasts
-                             
-      Bard Abilities:
-      - Bard Spellcasting: 
-        - Description: Spell DC 15
-          Cantrip: Mage Hand, Message, Minor Illusion, Vicious Mockery 
-          1st Level: Charm Person, Disguise Self, Tasha's Hideous Laughter, Unseen Servant
-          2nd Level: Calm Emotion, Detect Thoughts, Enthrall
-          3rd Level: Hypnotic Pattern, Major Image, Tongues
-          4th Level: Compulsion, Dimension Door, Polymorph
-          5th Level: Awaken, Legend Lore
-        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
-                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                      being Frightened or Charmed
-        Expertise: gets double proficiency bonus in
-        Magical Secrets: Choose two Spells from any class, including this one. A spell you choose must be of a level you can cast, as shown on the Bard table, or a cantrip - Fireball and Spirit Guardians
-         
-      College of Glamour Abilities:
-      - Mantle of Inspiration: you gain the ability to weave a song of fey magic that imbues your allies with vigor and speed. As a bonus action, you can expend one use of your Bardic Inspiration to grant yourself a wondrous
-                               appearance. When you do so, choose a number of creatures you can see and who can see you within 60 feet of you, up to a number equal to your Charisma modifier (minimum of one). Each of them
-                               gains 5 temporary hit points. When a creature gains these temporary hit points, it can immediately use its reaction to move up to its speed, without provoking opportunity attacks. The number of
-                               temporary hit points increases when you reach certain levels in this class, increasing to 8 at 5th level, 11 at 10th level, and 14 at 15th level 
-        Enthralling Performance: you can charge your performance with seductive, fey magic. If you perform for at least 1 minute, you can attempt to inspire wonder in your audience by singing, reciting a poem, or dancing. At
-                                 the end of the performance, choose a number of humanoids within 60 feet of you who watched and listened to all of it, up to a number equal to your Charisma modifier (minimum of one). Each
-                                 target must succeed on a Wisdom saving throw against your spell save DC or be charmed by you. While charmed in this way, the target idolizes you, it speaks glowingly of you to anyone who
-                                 speaks to it, and it hinders anyone who opposes you, avoiding violence unless it was already inclined to fight on your behalf. This effect ends on a target after 1 hour, if it takes any damage,
-                                 if you attack it, or if it witnesses you attacking or damaging any of its allies. If a target succeeds on its saving throw, the target has no hint that you tried to charm it
-        Mantle of Majesty:  you gain the ability to cloak yourself in a fey magic that makes others want to serve you. As a bonus action, you cast Command, without expending a spell slot, and you take on an appearance of
-                            unearthly beauty for 1 minute or until your concentration ends (as if you were concentrating on a spell). During this time, you can cast Command as a bonus action on each of your turns, without
-                            expending a spell slot. Any creature charmed by you automatically fails its saving throw against the Command you cast with this feature
+    - N/A
+    proficiencies:
+    - History
+    - Perception
+    - Insight    
+    - Performance
+    - Persuasion
+    - Musical Instruments
+  special-abilities:
+  - title: Forest Gnome Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Gnome Cunning
+    - content: Advantage on all Intelligence, Wisdom, and Charisma saves against magic
+    - title: Natural Illusionist
+    - content: Knows the Minor Illusion cantrip. Intelligence is your spellcasting modifier for it
+    - title: Speak with Small Beasts
+    - content: Through sound and gestures, you may communicate simple ideas with Small or smaller beasts
+  - title: Bard Abilities
+  - abilities:
+  - title: Bard Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 15
+    - title: Cantrip
+    - content: Mage Hand, Message, Minor Illusion, Vicious Mockery 
+    - title: 1st Level
+    - content: Charm Person, Disguise Self, Tasha's Hideous Laughter, Unseen Servant
+    - title: 2nd Level
+    - content: Calm Emotion, Detect Thoughts, Enthrall
+    - title: 3rd Level
+    - content: Hypnotic Pattern, Major Image, Tongues
+    - title: 4th Level
+    - content: Compulsion, Dimension Door, Polymorph
+    - title: 5th Level
+    - content: Awaken, Legend Lore
+    - title: Bardic Inspiration
+    - content: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+               10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+    - title: Jack of All Trades
+    - content: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+    - title: Song of Rest
+    - content: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+    - title: Expertise
+    - content: gets double proficiency bonus in
+    - title: Font of Inspiration 
+    - content: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+    - title: Countercharm
+    - content: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
+               being Frightened or Charmed
+    - title: Magical Secrets
+    - content: Choose two Spells from any class, including this one. A spell you choose must be of a level you can cast, as shown on the Bard table, or a cantrip
+  - title: College of Glamour Abilities
+  - abilities: 
+    - title: Mantle of Inspiration
+    - content: As a bonus action, you can expend one use of your Bardic Inspiration to grant yourself a wondrous appearance. When you do so, choose a number of creatures you can see and who can see you within 60
+               feet of you, up to a number equal to your Charisma modifier (minimum of one). Each of them gains 5 temporary hit points. When a creature gains these temporary hit points, it can immediately use its 
+               reaction to move up to its speed, without provoking opportunity attacks. The number of temporary hit points increases when you reach certain levels in this class, increasing to 8 at 5th level, 11 at 
+               10th level, and 14 at 15th level.   
+    - title: Enthralling Performance
+    - content: If you perform for at least 1 minute, you can attempt to inspire wonder in your audience by singing, reciting a poem, or dancing. At the end of the performance, choose a number of humanoids 
+               within 60 feet of you who watched and listened to all of it, up to a number equal to your Charisma modifier (minimum of one). Each target must succeed on a Wisdom saving throw against your spell
+               save DC or be charmed by you. While charmed in this way, the target idolizes you, it speaks glowingly of you to anyone who speaks to it, and it hinders anyone who opposes you, avoiding violence
+               unless it was already inclined to fight on your behalf. This effect ends on a target after 1 hour, if it takes any damage, if you attack it, or if it witnesses you attacking or damaging any of
+               its allies. If a target succeeds on its saving throw, the target has no hint that you tried to charm it. 
+    - title: Mantle of Majesty
+    - contnet: You gain the ability to cloak yourself in a fey magic that makes others want to serve you. As a bonus action, you cast Command, without expending a spell slot, and you take on an appearance of 
+               unearthly beauty for 1 minute or until your concentration ends (as if you were concentrating on a spell). During this time, you can cast Command as a bonus action on each of your turns, without 
+               expending a spell slot. Any creature charmed by you automatically fails its saving throw against the Command you cast with this feature. Once you use this feature, you can’t use it again until you 
+               finish a long rest.
+    
+  - title: Attacks
+  - content: 1 attack with short sword or spell
+  - title: Combat Tactics
+  - content: Hehliad will reluctantly engage with combatants if she feels she has the upper hand (because of numbers or the effects of her spells and performances). Otherwise, she seeks a respectable escape.
 
-    special-abilities:
-      - Proficiencies: Persuasion; Performance; Perception; Insight; History    
-    attacks: |
-      1 attack with short sword or spell
-    combat-tactics: |
-      Hehliad will reluctantly engage with combatants if she feels she has the upper hand (because of numbers or the effects of her spells and performances). Otherwise, she seeks a respectable escape.
-    special-equipment:
-    - Mac-Fuirmidh Cittern: An instrument of the bards is an exquisite example of its kind superior to an ordinary instrument in every way. Seven types of these instruments exist each named after a legendary bard college. A
-                            creature that attempts to play the instrument without being attuned to it must succeed on a DC 15 Wisdom saving throw or take 2d4 psychic damage. You can use an action to play the instrument and cast
-                            one of its spells. Once the instrument has been used to cast a spell it can't be used to cast that spell again until the next dawn. The spells use your spellcasting ability and spell save DC. You can
-                            play the instrument while casting a spell that causes any of its targets to be charmed on a failed saving throw thereby imposing disadvantage on the save. This effect applies only if the spell has a
-                            somatic or a material component. All instruments of the bards can be used to cast the following spells - fly invisibility levitate and protection from evil and good. In addition the Mac-Fuirmidh
-                            cittern can be used to cast barkskin cure wounds and fog cloud.
+  - title: Special Equipment
+  - abilities:
+    - title: Mac-Fuirmidh Cittern
+    - content: An instrument of the bards is an exquisite example of its kind superior to an ordinary instrument in every way. Seven types of these instruments exist each named after a legendary bard college. A
+               creature that attempts to play the instrument without being attuned to it must succeed on a DC 15 Wisdom saving throw or take 2d4 psychic damage. You can use an action to play the instrument and cast
+               one of its spells. Once the instrument has been used to cast a spell it can't be used to cast that spell again until the next dawn. The spells use your spellcasting ability and spell save DC. You can
+               play the instrument while casting a spell that causes any of its targets to be charmed on a failed saving throw thereby imposing disadvantage on the save. This effect applies only if the spell has a
+               somatic or a material component. All instruments of the bards can be used to cast the following spells - fly invisibility levitate and protection from evil and good. In addition the Mac-Fuirmidh
+               cittern can be used to cast barkskin cure wounds and fog cloud.
 
   profile:
 
