--- a/npcs/hurley.yaml
+++ b/npcs/hurley.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -238,7 +238,7 @@ npc:
     #
     # Required.
     #
-    class: Civilian
+    class: Bard
 
     #
     # D & D subclasses (case insensitive):
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: N/A
+    subclass: College of Fools
 
     #
     # Class level.
@@ -270,7 +270,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 0
+    level: 3
 
     #
     # Alignments (case insensitive):
@@ -450,8 +450,8 @@ npc:
     dex: 17
     con: 9
     int: 16
-    wis: 18
-    cha: 14
+    wis: 14
+    cha: 18
 
   #
   # Special characteristics.
@@ -461,22 +461,73 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Goblin Abilities:
-      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
-        Fury of the Small: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
-                           your level.
-        Nimble Escape: You can take the Disengage or Hide action as a bonus action on each of your turns.
-        Mud Slinger:  You gain the cantrip vicious mockery. Charisma is your spellcasting ability for this spell.
-
-    special-abilities:
-       Proficient in Acrobatics, Stealth, Sleaigh-of-Hand, Insight, Perception, Deception, Performance, Persuasion         
-    attacks: |
-      1 attack with his dagger
-    combat-tactics: |
-      Will only fight from a sneak attack, otherwise he will run 
-    special-equipment:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
     - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - Tumbling
+    proficiencies:
+    - Acrobatics
+    - Stealth
+    - Sleight-of-Hand    
+    - Insight
+    - Persuasion
+    - Perception
+    - Deception
+    - Performance
+  special-abilities:
+  - title: Goblin Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light           
+    - title: Fury of the Small
+    - content: When you damage a creature with an attack or a spell and the creature's size is larger than yours, you can cause the attack or spell to deal extra damage to the creature. The extra damage equals 
+               your level.
+    - title: Nimble Escape
+    - content: You can take the Disengage or Hide action as a bonus action on each of your turns.
+  - title: Bard Abilities
+  - abilities:
+  - title: Bard Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 15
+    - title: Cantrip
+    - content: Mage Hand, Vicious Mockery 
+    - title: 1st Level
+    - content: Charm Person, Disguise Self, Hideous Laughter, Silvery Barbs
+    - title: 2nd Level
+    - content: Detect Thoughts, Crown of Madness
+    - title: Bardic Inspiration
+    - content: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+               10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+    - title: Jack of All Trades
+    - content: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+    - title: Song of Rest
+    - content: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+    - title: Expertise
+    - content: gets double proficiency bonus in    
+  - title: College of The Fool Abilities
+  - abilities: 
+    - title: Jokes on You
+    - content: A Fool never misses an opportunity to make a flamboyant display, even under attack. Why simply dodge a firebolt when you can pirouette out of harm's way? At the very least, your comrades might get a 
+               chuckle. if you are forced to make a Dexterity saving throw during combat, you can make a Performance (Cha) check instead.
+    - title: The Best Medicine
+    - content: You learn how to infuse not just your inspiring songs with the magic of creation, but your very life essence as well. When you share your good humor and reassuring optimism with your friends, they 
+               share in that life essence as well. In addition to Attack Rolls, Ability Checks, and Saving Throws, your allies can now also use Bardic Inspiration to grant themselves Temporary Hit Points.    
+  - title: Feats
+  - content: Mobile  
+  - title: Attacks
+  - content: 1 attack with his dagger
+  - title: Combat Tactics
+  - content: Will only fight from a sneak attack, otherwise he will run 
+
 
   profile:
 
