--- a/npcs/hylinn_groveby.yaml
+++ b/npcs/hylinn_groveby.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -460,21 +460,38 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Elf Abilities:
-      - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
-        Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light 
-        Trance: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is /“trance./”) While meditating, you can dream after a fashion; such
-                dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
-
-    special-abilities:
-       Proficient in Sleaigh-of-Hand
-    attacks: |
-      1 attack with an unarmed strike or improvised weapon
-    combat-tactics: |
-      Will only fight if it's life or death, or if she's drunk enough 
-    special-equipment:
+    saving-throws:
+    - Constitution
+    - Strength
+    damage-immunities:
     - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
+    skills:
+    - Mixology
+    proficiencies:
+    - Sleight-of-Hand
+    - Insight
+    - Deception
+  special-abilities:
+  - title: Elf Abilities
+  - abilities: 
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+
+  - title: Attacks
+  - content: 1 attack with an unarmed strike or improvised weapon
+  - title: Combat Tactics
+  - content: Will only fight if it's life or death, or if she's drunk enough 
 
   profile:
 
